--- a/index.html
+++ b/index.html
@@ -12,21 +12,34 @@
 <body>
 <div class="canvasContainer"></div>
 <div class="vstack">
+
+    <div class="container" style="display: flex;">
+        <canvas id="canvas" width="400" height="400" style="background-color: black;">
+            Your browser doesn't appear to support the
+            <code>&lt;canvas&gt;</code> element.
+        </canvas>
+    </div>
     <div class="container" id="controlsContainer">
         <div class="btn-group" role="group"></div>
         <div class="vstack">
             <!--Width label and slider-->
             <div class="hstack" id="widthSliderStack">
                 <label for="widthSlider"><b>Width:</b></label>
-                <input id="widthSliderRange" type="range" class="form-range" id="widthSlider" min="0.6" max="4" value="1" step="0.1">
+                <input id="widthSliderRange" type="range" class="form-range" id="widthSlider" min="0.6" max="4"
+                       value="2" step="0.1">
             </div>
+            <!--Color picker-->
+            <div class="hstack" id="colorOscillatorStack">
+                <label for="colorOscillator"><b>Width:</b></label>
+                <input id="colorOscillatorRange" type="range" class="form-range" id="colorOscillatorRange" min="0" max="10"
+                       value="5" step="0.2">
+            </div>
+            <div id="color-pickerControl">
+                <label for="color-picker"><b>Color</b></label>
+                <input type="color" id="color-picker" name="color-picker" value="#00E1FF">
+            </div>
+
         </div>
-    </div>
-    <div class="container" style="display: flex;">
-        <canvas id="canvas" width="400" height="400" style="background-color: black;">
-            Your browser doesn't appear to support the
-            <code>&lt;canvas&gt;</code> element.
-        </canvas>
     </div>
 </div>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
