Color oscillation fixed

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
             <!--Color picker-->
             <div class="hstack" id="colorOscillatorStack">
-                <label for="colorOscillator"><b>Width:</b></label>
-                <input id="colorOscillatorRange" type="range" class="form-range" id="colorOscillatorRange" min="0" max="10"
-                       value="5" step="0.2">
+                <label for="colorOscillatorRange"><b>Width:</b></label>
+                <input id="colorOscillatorRange" type="range" class="form-range" id="colorOscillatorRange" min="0" max="29"
+                       value="1" step="0.2">
             </div>
             <div id="color-pickerControl">
                 <label for="color-picker"><b>Color</b></label>
