Fix size to screen width and container padding.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="canvasContainer"></div>
 <div class="vstack" id="appStack">
 
-    <div class="container" style="display: flex;">
+    <div class="container" id="canvasContainer">
         <canvas id="canvas" width="400" height="400" style="background-color: black;">
             Your browser doesn't appear to support the
             <code>&lt;canvas&gt;</code> element.
