divided up functions into files

--- a/index.html
+++ b/index.html
@@ -48,8 +48,19 @@
             </div>
         </div>
     </div>
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/helpers.js"></script>
+    <script src="assets/js/colorConversion.js"></script>
+    <script src="assets/js/controls.js"></script>
+    <script src="assets/js/pointManipulations.js"></script>
+    <script src="assets/js/particleOperations.js"></script>
     <script src="assets/js/canvasTest.js"></script>
+
+
+
+
+
 </body>
 
 </html>
