--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             <input id="separationSliderRange" type="range" class="form-range" id="separationSlider" min="1" max="5"
                    value="1" step="0.1">
         </div>
+        <!--source number slider-->
+
+        <div id="vertexSliderStack">
+            <label for="vertexSlider"><b>Sources: <span id="vertexCountText">4</span></b></label>
+            <input id="vertexSliderRange" type="range" class="form-range" id="vertexSlider" min="1" max="5"
+                   value="4" step="1">
+        </div>
+
         <!--Color picker-->
         <div id="colorOscillatorStack">
             <label for="colorOscillatorRange"><b>Rainbow:</b></label>
@@ -44,19 +52,17 @@
         <div id="buttonStack">
             <button id="startButton" class="btn btn-primary">Restart</button>
             <button id="stopButton" class="btn btn-primary">Stop</button>
-
-
         </div>
     </div>
 </div>
 
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/helpers.js"></script>
-    <script src="assets/js/colorConversion.js"></script>
-    <script src="assets/js/controls.js"></script>
-    <script src="assets/js/pointManipulations.js"></script>
-    <script src="assets/js/particleOperations.js"></script>
-    <script src="assets/js/canvasTest.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/helpers.js"></script>
+<script src="assets/js/colorConversion.js"></script>
+<script src="assets/js/controls.js"></script>
+<script src="assets/js/pointManipulations.js"></script>
+<script src="assets/js/particleOperations.js"></script>
+<script src="assets/js/canvasTest.js"></script>
 
 
 </body>
